# rag-front-streamlit

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
frontend/: Dockerfile  pyproject.toml  requirements.txt  streamlit_app.py
frontend/app/: 0_Start_Here.py  README.md
frontend/app/pages/: 1_rag.py  2_Chat_With_History.py  3_Advanced_LLM_Features.py  4_Multi_Agents.py  5_Documentation.py  Documentation.md  common.py
frontend/app/pages/lib/: agents.py  pinecone.py
frontend/app/sample_files/: ArtOfWar-SunTzu.docx  alice.txt
frontend/app/utils/: files.py
frontend/test/app/pages/: test_rag.py
